--- a/templates/edit-profile.html
+++ b/templates/edit-profile.html
@@ -1,15 +1,11 @@
 {% extends "base.html" %}
 {% block container %}
 <section id="edit-profile-page" class="edit">
-            <form id="edit-form" action="#" method="">
+            <form id="edit-form" action="{% url "profile-edit-page" %}" method="post">
+                {% csrf_token %}
                 <fieldset>
                     <legend>Edit Profile</legend>
-                    <label for="first-name">First Name</label>
-                    <input type="text" name="first-name" id="first-name" value="Peter">
-                    <label for="last-name">Last name</label>
-                    <input type="text" name="last-name" id="last-name" value="Tomov">
-                    <label for="image-url">Image URL</label>
-                    <input type="url" name="image-url" id="image-url" value="https://thumbs.dreamstime.com/b/profile-picture-vector-perfect-social-media-other-web-use-125320533.jpg">
+                    {{ form }}
                     <input class="button submit" type="submit" value="Edit">
                 </fieldset>
             </form>
